// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Search component should render Search component 1`] = `
<div
  className="search"
>
  <form>
    <input
      placeholder="Поиск"
      type="text"
      value=""
    />
    <button
      type="submit"
    >
      <svg
        fill="none"
        height="17"
        viewBox="0 0 17 17"
        width="17"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clipRule="evenodd"
          d="M13 7.5C13 10.5376 10.5376 13 7.5 13C4.46243 13 2 10.5376 2 7.5C2 4.46243 4.46243 2 7.5 2C10.5376 2 13 4.46243 13 7.5ZM12.0491 13.4633C10.7873 14.4274 9.21054 15 7.5 15C3.35786 15 0 11.6421 0 7.5C0 3.35786 3.35786 0 7.5 0C11.6421 0 15 3.35786 15 7.5C15 9.21054 14.4274 10.7873 13.4633 12.0491L16.7071 15.2929L15.2929 16.7071L12.0491 13.4633Z"
          fill="#F1B926"
          fillRule="evenodd"
        />
      </svg>
      <span>
        Найти
      </span>
    </button>
    <ul
      className="list"
    />
  </form>
</div>
`;

exports[`Search component should render list block 1`] = `
<div
  className="search"
>
  <form>
    <input
      placeholder="Поиск"
      type="text"
      value="Test"
    />
    <button
      type="submit"
    >
      <svg
        fill="none"
        height="17"
        viewBox="0 0 17 17"
        width="17"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clipRule="evenodd"
          d="M13 7.5C13 10.5376 10.5376 13 7.5 13C4.46243 13 2 10.5376 2 7.5C2 4.46243 4.46243 2 7.5 2C10.5376 2 13 4.46243 13 7.5ZM12.0491 13.4633C10.7873 14.4274 9.21054 15 7.5 15C3.35786 15 0 11.6421 0 7.5C0 3.35786 3.35786 0 7.5 0C11.6421 0 15 3.35786 15 7.5C15 9.21054 14.4274 10.7873 13.4633 12.0491L16.7071 15.2929L15.2929 16.7071L12.0491 13.4633Z"
          fill="#F1B926"
          fillRule="evenodd"
        />
      </svg>
      <span>
        Найти
      </span>
    </button>
    <ul
      className="list"
    >
      <li
        className="item"
        key="1"
      >
        <Link
          className="link"
          to="/character/1"
        >
          <img
            alt="Test"
            className="image"
            src="https://test.test"
          />
          <span
            className="name"
          >
            Test
          </span>
        </Link>
      </li>
      <li
        className="item"
        key="1"
      >
        <Link
          className="link"
          to="/character/1"
        >
          <img
            alt="Test2"
            className="image"
            src="https://test2.test"
          />
          <span
            className="name"
          >
            Test2
          </span>
        </Link>
      </li>
    </ul>
  </form>
</div>
`;
